﻿zg 20.02.2015 01:01:34 +0200 - build 4272

1. уточнение 4262: если что-то в VE_READ приводило к перерисовке quickview - фар падал.

shmuel 19.02.2015 16:30:33 +0200 - build 4271

1. M#2950: InputRecordToName возвращает символ с кодом 1: ☺

w17 18.02.2015 23:36:18 +0300 - build 4270

1. M#2949: Проблема HEX поиска -- fix 4208

svs 14.02.2015 10:29:41 +0300 - build 4269

1. SQLite 3.8.8.2

w17 13.02.2015 16:24:23 +0300 - build 4268

1. M#2540: Viewer Search always starts from the beginning of the file

2. Default Viewer.PersistentBlocks = true

zg 09.02.2015 02:06:46 +0200 - build 4267

1. вызов ACTL_WAITKEY возвращает 0 в соответствии с документацией.

w17 08.02.2015 16:36:15 +0300 - build 4266

1. M#2935: <Symlink> to files not showing

2. M#2934: Ошибки c HEX режимом в диалогах поиска

w17 04.02.2015 15:35:47 +0300 - build 4265

1. Уточнение 4262

w17 04.02.2015 14:10:08 +0300 - build 4264

1. Уточнение 4263

w17 03.02.2015 20:32:45 +0300 - build 4263

1. Viewer autoupdate при наличии ACTL_SYNCHRO или far.Timer() (M#2532)

w17 03.02.2015 17:43:09 +0300 - build 4262

1. Некорректное отображение текста изменённого файла при переключении во вьювер.

shmuel 03.02.2015 01:42:54 +0200 - build 4261

1. Plugins API: добавлена стандартная функция FSF.FarClock - то же, что Far.UpTime в макросах,
   но в микросекундах и с микросекундным разрешением. Документация следует.

w17 02.02.2015 13:38:18 +0300 - build 4260

1. Правки просмотрщика:
   -пара мелких багов/опечаток
   -'прелэстный' хак 0x0 <=> 0xffff и последствия его рефакторинга
   Экспериментально - можно выделять произвольный текст Shift+MouseClick начало/конец области
   Продолжение M#2540 - поиск с регулярными выражениями пока не исправлен

drkns 01.02.2015 17:25:54 +0200 - build 4259

1. При замене с регулярными выражениями теперь можно использовать именованные группы.

drkns 30.01.2015 19:26:48 +0200 - build 4258

1. 0002708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"
   Откат 4257 и исправление 3295.
