@@ -1,4 +1,8 @@
-﻿zg 20.02.2015 01:01:34 +0200 - build 4272
+﻿shmuel 20.02.2015 17:58:57 +0200 - build 4273
+
+1. Рефакторинг.
+
+zg 20.02.2015 01:01:34 +0200 - build 4272
 
 1. уточнение 4262: если что-то в VE_READ приводило к перерисовке quickview - фар падал.
 
